--- a/apps/fluent-tester/package.json
+++ b/apps/fluent-tester/package.json
@@ -52,6 +52,7 @@
     "@fluentui-react-native/experimental-button": "0.16.51",
     "@fluentui-react-native/experimental-checkbox": "0.12.36",
     "@fluentui-react-native/experimental-expander": "0.4.18",
+    "@fluentui-react-native/experimental-icon": ">=0.0.1 <1.0.0",
     "@fluentui-react-native/experimental-link": "^0.1.7",
     "@fluentui-react-native/experimental-menu-button": ">=0.5.10 <1.0.0",
     "@fluentui-react-native/experimental-native-date-picker": ">=0.7.3 <1.0.0",
